docs: rename imports

--- a/notebooks/chembl-1-percent.ipynb
+++ b/notebooks/chembl-1-percent.ipynb
@@ -31,7 +31,6 @@
    "source": [
     "import itertools\n",
     "import os\n",
-    "import time\n",
     "import warnings\n",
     "from concurrent.futures import ProcessPoolExecutor\n",
     "\n",
@@ -46,8 +45,8 @@
     "from rdkit.SimDivFilters.rdSimDivPickers import MaxMinPicker\n",
     "from tqdm.auto import tqdm\n",
     "\n",
-    "from moll.core.distance import tanimoto\n",
-    "from moll.core.diversity import OnlineDiversityPicker"
+    "from moll.metrics import one_minus_tanimoto\n",
+    "from moll.picking import OnlineDiversityPicker"
    ]
   },
   {
@@ -498,7 +497,7 @@
     "        mol = Chem.MolFromSmiles(smi)\n",
     "        fp = fp_gen.GetFingerprintAsNumPy(mol)\n",
     "        return np.array(fp, bool)\n",
-    "    except:\n",
+    "    except Exception:\n",
     "        print(f\"Ignored: {smi}\")\n",
     "        return None"
    ]
@@ -545,8 +544,8 @@
     "# Init moll's picker\n",
     "picker = OnlineDiversityPicker(\n",
     "    capacity=N_MOL_TO_PICK,\n",
-    "    k_neighbors=1000, # you can use much smaller number here, it's a demo\n",
-    "    dist_fn=tanimoto,\n",
+    "    k_neighbors=1000,  # you can use much smaller number here, it's a demo\n",
+    "    dist_fn=one_minus_tanimoto,\n",
     "    threshold=0.7,\n",
     ")\n",
     "\n",
@@ -559,9 +558,9 @@
     "    total=N_BATCHES,\n",
     "):\n",
     "    batch = list(batch)\n",
-    "    fps_moll.extend(batch) # save for later\n",
+    "    fps_moll.extend(batch)  # save for later\n",
     "    batch = jnp.array(batch, dtype=bool)\n",
-    "    picker.extend(batch)"
+    "    picker.update(batch)"
    ]
   },
   {
@@ -573,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-11-08T19:35:38.529492Z",
@@ -756,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-11-08T19:35:38.564390Z",
@@ -783,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-11-08T19:35:38.567715Z",
@@ -801,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-11-08T19:35:38.572553Z",
@@ -2158,7 +2157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-11-08T19:35:38.598056Z",
@@ -2183,7 +2182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-11-08T19:38:35.197161Z",
@@ -2222,7 +2221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2245,7 +2244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2254,7 +2253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-11-08T19:45:50.905105Z",
@@ -2276,7 +2275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-11-08T19:45:53.363592Z",
@@ -2287,7 +2286,7 @@
    },
    "outputs": [],
    "source": [
-    "tanimoto_original = jax.vmap(tanimoto)(\n",
+    "tanimoto_original = jax.vmap(one_minus_tanimoto)(\n",
     "    fps_subset_orgiginal[:-1], fps_subset_orgiginal[1:]\n",
     ")\n",
     "\n",
@@ -2298,7 +2297,7 @@
     "    ]\n",
     ")\n",
     "\n",
-    "tanimoto_moll = jax.vmap(tanimoto)(fps_subset_moll[:-1], fps_subset_moll[1:])"
+    "tanimoto_moll = jax.vmap(one_minus_tanimoto)(fps_subset_moll[:-1], fps_subset_moll[1:])"
    ]
   },
   {
@@ -2310,7 +2309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-11-08T19:45:53.489165Z",
@@ -2350,7 +2349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
