--- a/notebooks/chembl-1-percent.ipynb
+++ b/notebooks/chembl-1-percent.ipynb
@@ -46,7 +46,7 @@
     "from tqdm.auto import tqdm\n",
     "\n",
     "from moll.metrics import one_minus_tanimoto\n",
-    "from moll.picking import OnlineDiversityPicker"
+    "from moll.pick import OnlineDiversityPicker"
    ]
   },
   {
