--- a/notebooks/chembl-1-percent.ipynb
+++ b/notebooks/chembl-1-percent.ipynb
@@ -11,11 +11,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The notebook evaluates methods for selecting chemically diverse subsets from the ChEMBL database. It compares the performance of `OnlinePicker` from `moll`, with GPU acceleration, against `MaxMinPicker` from RDKit, and a control method of random selection. Diversity is assessed using Tanimoto coefficients as the chemical similarity metric. The accelerated `OnlinePicker` demonstrates improved results over `MaxMinPicker` in terms of diversity and speed.\n",
+    "The notebook evaluates methods for selecting chemically diverse subsets from the ChEMBL database. It compares the performance of `OnlineVectorPicker` from `moll`, with GPU acceleration, against `MaxMinPicker` from RDKit, and a control method of random selection. Diversity is assessed using Tanimoto coefficients as the chemical similarity metric. The accelerated `OnlineVectorPicker` demonstrates improved results over `MaxMinPicker` in terms of diversity and speed.\n",
     "\n",
     "RDKit is used to calculate Morgan fingerprints for each molecule in the dataset. The fingerprints are used to calculate Tanimoto coefficients, which are used as the similarity metric for diversity selection.\n",
     "\n",
-    "The `OnlinePicker` algorithm enhances efficiency by calculating molecular repulsion within a limited local vicinity, denoted by `k_neighbors`. In this demonstration, `k_neighbors` is set to **1000** to showcase the algorithm's capability to curate quality molecular subsets. However, for routine applications, a smaller neighborhood size—typically around `k_neighbors` of **100** — is sufficient to achieve satisfactory results. The `OnlinePicker` exhibits linear scalability, making it applicable for both small and large datasets. It operates with or without the use of GPU acceleration."
+    "The `OnlineVectorPicker` algorithm enhances efficiency by calculating molecular repulsion within a limited local vicinity, denoted by `k_neighbors`. In this demonstration, `k_neighbors` is set to **1000** to showcase the algorithm's capability to curate quality molecular subsets. However, for routine applications, a smaller neighborhood size—typically around `k_neighbors` of **100** — is sufficient to achieve satisfactory results. The `OnlineVectorPicker` exhibits linear scalability, making it applicable for both small and large datasets. It operates with or without the use of GPU acceleration."
    ]
   },
   {
@@ -43,7 +43,7 @@
     "from tqdm.auto import tqdm\n",
     "\n",
     "from moll.metrics import one_minus_tanimoto\n",
-    "from moll.pick import OnlinePicker\n",
+    "from moll.pick import OnlineVectorPicker\n",
     "from moll.small import Molecule\n",
     "from moll.utils import iter_slices, map_concurrently, no_warnings, unpack_arguments"
    ]
@@ -393,14 +393,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `OnlinePicker` from `moll`"
+    "## `OnlineVectorPicker` from `moll`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define a function to prepare the data (fingerprints and compound labels) for the `OnlinePicker` algorithm:"
+    "Define a function to prepare the data (fingerprints and compound labels) for the `OnlineVectorPicker` algorithm:"
    ]
   },
   {
@@ -463,7 +463,7 @@
     "%%time\n",
     "\n",
     "# Init moll's picker\n",
-    "picker = OnlinePicker(\n",
+    "picker = OnlineVectorPicker(\n",
     "    capacity=N_MOL_TO_PICK,\n",
     "    k_neighbors=1000,  # you can use much smaller number here, it's a demo\n",
     "    similarity_fn=\"one_minus_tanimoto\",\n",
@@ -2134,7 +2134,7 @@
    "source": [
     "sns.histplot(dists_random, label=\"random\", alpha=0.6, color=\"gray\")\n",
     "sns.histplot(dists_rdkit, label=\"MaxMinPicker (RDKit)\", alpha=0.6, color=\"blue\")\n",
-    "sns.histplot(dists_moll, label=\"OnlinePicker (moll)\", alpha=0.6, color=\"red\")\n",
+    "sns.histplot(dists_moll, label=\"OnlineVectorPicker (moll)\", alpha=0.6, color=\"red\")\n",
     "plt.xlim(0.75, 1)\n",
     "plt.legend()\n",
     "plt.show()"
@@ -2184,9 +2184,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- `OnlinePicker` is faster (see **wall time** under the cells with calculations) than `MaxMinPicker` and works online: fingerprints are calculated on the fly on the CPU and the diversity is calculated on the GPU in parallel.\n",
-    "- `OnlinePicker` is better than a random pick.\n",
-    "- `OnlinePicker` is comparable (even better in this specific case) to `MaxMinPicker` in terms of diversity.\n",
+    "- `OnlineVectorPicker` is faster (see **wall time** under the cells with calculations) than `MaxMinPicker` and works online: fingerprints are calculated on the fly on the CPU and the diversity is calculated on the GPU in parallel.\n",
+    "- `OnlineVectorPicker` is better than a random pick.\n",
+    "- `OnlineVectorPicker` is comparable (even better in this specific case) to `MaxMinPicker` in terms of diversity.\n",
     "- Adjusting the `k_neighbors` parameter influences the diversity of the resulting subset, with larger values tending to yield more diversity. However, this increment also affects the speed."
    ]
   }
