--- a/notebooks/chembl-1-percent.ipynb
+++ b/notebooks/chembl-1-percent.ipynb
@@ -2033,7 +2033,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "picked_moll = jnp.array(picker.points)\n",
+    "picked_moll = jnp.array(picker.vectors)\n",
     "dists_moll = dists(picked_moll)"
    ]
   },
@@ -2207,7 +2207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.3"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
